# crewai-agent-experiments

debate/: pyproject.toml
debate/output/: judgement.md  opposition.md  proposal.md
debate/src/debate/: crew.py  main.py
debate/src/debate/config/: agents.yaml  tasks.yaml
financial_researcher/output/: report.md
financial_researcher/src/financial_researcher/: crew.py  main.py
financial_researcher/src/financial_researcher/config/: tasks.yaml
movie_picker/: README.md  pyproject.toml  report.md
movie_picker/src/movie_picker/: crew.py  main.py
movie_picker/src/movie_picker/config/: agents.yaml  tasks.yaml
