[project]
name = "movie_picker"
version = "0.1.0"
description = "movie_picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
movie_picker = "movie_picker.main:run"
run_crew = "movie_picker.main:run"
train = "movie_picker.main:train"
replay = "movie_picker.main:replay"
test = "movie_picker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
